--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.1.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
